refactor: done setting up request inspection
