# docs/swagger.json
@@ -33,7 +33,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.httpAnythingResponse"
+                            "type": "object"
                         }
                     }
                 }
@@ -54,7 +54,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.httpAnythingResponse"
+                            "type": "object"
                         }
                     }
                 }
@@ -75,7 +75,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.httpAnythingResponse"
+                            "type": "object"
                         }
                     }
                 }
@@ -96,7 +96,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.httpAnythingResponse"
+                            "type": "object"
                         }
                     }
                 }
@@ -117,7 +117,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.httpAnythingResponse"
+                            "type": "object"
                         }
                     }
                 }
@@ -138,7 +138,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.httpAnythingResponse"
+                            "type": "object"
                         }
                     }
                 }
@@ -159,7 +159,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.httpAnythingResponse"
+                            "type": "object"
                         }
                     }
                 }
@@ -332,6 +332,29 @@
                 }
             }
         },
+        "/headers": {
+            "get": {
+                "description": "Returns all headers of the request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Request Inspection"
+                ],
+                "summary": "Returns the request headers.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/image": {
             "get": {
                 "description": "Returns a simple image of the type suggested by the Accept header",
@@ -442,6 +465,29 @@
                         "description": "OK",
                         "schema": {
                             "type": "file"
+                        }
+                    }
+                }
+            }
+        },
+        "/ip": {
+            "get": {
+                "description": "Returns the IP address of the client making the request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Request Inspection"
+                ],
+                "summary": "Returns the client's IP address.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
                         }
                     }
                 }
@@ -706,48 +752,27 @@
                     }
                 }
             }
-        }
-    },
-    "definitions": {
-        "api.httpAnythingResponse": {
-            "type": "object",
-            "properties": {
-                "args": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
+        },
+        "/user-agent": {
+            "get": {
+                "description": "Returns the User-Agent string of the request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Request Inspection"
+                ],
+                "summary": "Returns the User-Agent string.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
                     }
-                },
-                "data": {
-                    "type": "string"
-                },
-                "files": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "form": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "headers": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "json": {},
-                "method": {
-                    "type": "string"
-                },
-                "origin": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
                 }
             }
         }
